--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,69 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>아웃로</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>채팅 앱</title>
+  <style>
+    #messages { list-style: none; padding: 0; max-height: 300px; overflow-y: auto; }
+    #chat { display: flex; margin-top: 10px; }
+    input { flex: 1; padding: 10px; }
+    button { padding: 10px; }
+  </style>
 </head>
 <body>
-  <h1>아웃로</h1>
+  <h1>채팅 앱</h1>
+  <div>
+    <label>채팅방 이름: <input id="roomInput" type="text" placeholder="room1" /></label>
+    <button onclick="joinRoom()">입장</button>
+  </div>
 
-  <input id="room" type="text" placeholder="채팅방 이름 (예: room1)" />
-  <input id="username" type="text" placeholder="사용자 이름" />
-  <div id="chat" style="height: 300px; overflow-y: auto; border: 1px solid #ccc; margin: 10px 0;"></div>
-  
-  <input id="message" type="text" placeholder="메시지를 입력하세요" />
-  <button onclick="sendMessage()">전송</button>
+  <ul id="messages"></ul>
+  <form id="chat" onsubmit="sendMessage(event)">
+    <input id="m" autocomplete="off" placeholder="메시지 입력" />
+    <button>전송</button>
+  </form>
 
+  <!-- socket.io 클라이언트 스크립트 -->
   <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+  <script>
+    const socket = io(); // 현재 도메인 기준 자동 연결
+
+    let currentRoom = '';
+
+    function joinRoom() {
+      const room = document.getElementById('roomInput').value.trim();
+      if (!room) return alert('채팅방 이름을 입력하세요.');
+      currentRoom = room;
+      socket.emit('join room', room);
+      document.getElementById('messages').innerHTML = '';
+    }
+
+    socket.on('chat history', (msgs) => {
+      msgs.forEach((msg) => appendMessage(msg.user, msg.text));
+    });
+
+    socket.on('chat message', (msg) => {
+      appendMessage(msg.user, msg.text);
+    });
+
+    function appendMessage(user, text) {
+      const li = document.createElement('li');
+      li.textContent = `${user}: ${text}`;
+      document.getElementById('messages').appendChild(li);
+    }
+
+    function sendMessage(e) {
+      e.preventDefault();
+      const input = document.getElementById('m');
+      if (!input.value || !currentRoom) return;
+      const msg = {
+        user: '익명', // 필요하면 사용자 이름 입력 받도록
+        text: input.value,
+        room: currentRoom,
+      };
+      socket.emit('chat message', msg);
+      input.value = '';
+    }
+  </script>
 </body>
 </html>
